update viz functions

--- a/BSTracker/templates/BSTracker/dashboard.html
+++ b/BSTracker/templates/BSTracker/dashboard.html
@@ -8,8 +8,7 @@
             <div class="row">
                 <div class="col">
                 <h5>Points noirs </h5>
-                <!-- <span>{{totalPN}}</span> -->
-                <span>653</span>
+                <span>{{totalPN}}</span>
                 </div>
                 <div class="col-auto">
                     <img src="{% static 'images/BS.png' %}" alt="point noir"/>
@@ -26,8 +25,8 @@
                 <div class="col">
                     <h5>Accidents</h5>
                     <span>
-                        <!-- {{total_acc.total_acc__sum}} -->
-                        23409
+                        {{total_acc.total_acc__sum}}
+                       
                     </span>
                 </div>
                 <div class="col-auto">
@@ -44,8 +43,7 @@
                 <div class="col">
                 <h5>Tués</h5>
                 <span>
-                    <!-- {{total_dead.total_dead__sum}} -->
-                    3293
+                    {{total_dead.total_dead__sum}}
                 </span>
                 </div>
                 <div class="col-auto">
@@ -62,8 +60,8 @@
                 <div class="col">
                 <h5>Blessés</h5>
                 <span>
-                    <!-- {{total_injured.total_injured__sum}} -->
-                    31675
+                    {{total_injured.total_injured__sum}}
+                    
                 </span>
                 </div>
                 <div class="col-auto">
