--- a/BSTracker/templates/BSTracker/map.html
+++ b/BSTracker/templates/BSTracker/map.html
@@ -5,7 +5,7 @@
 <div>
     <div id="map">
     </div>
-    <div class="filter-box">
+    <!-- <div class="filter-box">
         <div class="filter-items">
             <div class="filter-item">
                 <span> Wilaya </span>
@@ -55,7 +55,7 @@
             </div>
             <button type="submit" class="rech-btn">Rechercher</button>
         </div>
-    </div>
+    </div> -->
     <script>
         var map = L.map('map').setView([28.033886, 1.659626], 5);
         L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
