--- a/BSTracker/templates/BSTracker/new_black_spot_form.html
+++ b/BSTracker/templates/BSTracker/new_black_spot_form.html
@@ -44,17 +44,17 @@
                             <h2 class="fs-subtitle">Saisissez le nombre de victimes pour chaque catégorie</h2>
                             <div class="inputprop">
                                 <span>Nombre des accidents</span>
-                                <input type="text" name="Pnbaccidents" placeholder="Introduisez le nombre d'accidents"/>
+                                <input type="number" name="Pnbaccidents" placeholder="Introduisez le nombre d'accidents"/>
                             </div>
                             
                             <div class="inputprop">
                                 <span>Nombre de tués</span>
-                                <input type="text" name="Pnbdead" placeholder="Introduisez le nombre de tués"/>
+                                <input type="number" name="Pnbdead" placeholder="Introduisez le nombre de tués"/>
                             </div>
                            
                             <div class="inputprop">
                                 <span>Nombre de blessés</span>
-                                <input type="text" name="Pnbinjured" placeholder="Introduisez le nombre de blessés"/>
+                                <input type="number" name="Pnbinjured" placeholder="Introduisez le nombre de blessés"/>
                             </div>
                            
                             <!-- <input type="button" name="previous" class="previous action-button-previous" value="Previous"/> -->
