--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -8,6 +8,7 @@
 {%endif%} -->
 
 <nav class="sidenav" id="sidenav-main">
+  
   <div class="sidenav-inner">
     <div class="sidenav-header  align-items-center">
       <a class="navbar-brand" href="/">
@@ -26,13 +27,14 @@
                 <span>Canevas de traitements</span> 
               </button>
                 <div class="dropdown-container">
-
+                  {% if perms.user.is_superuser %}
+                  <a href="/List-caneva"> <i class="bi-clock-history"></i> <span class="nav-link-text">Historique</span> </a>
+                  {% else %}
                   <a href="/create-caneva/new"> <i class="bi-plus-circle"></i><span class="nav-link-text">Nouveau</span> </a>
                   <a href="/List-caneva"> <i class="bi-clock-history"></i> <span class="nav-link-text">Historique</span> </a>
-                </div>
+                  {% endif%}
                   
-           
-   
+                </div>
           </li> 
           <li class="nav-item">
             <a href="/dashboard">
@@ -46,23 +48,33 @@
               <span class="nav-link-text">Cartographies</span>
             </a>
           </li>
+          {% if user.get_username == "chargé_étude" %}
           <li class="nav-item">
-            <a href="/">
+            <button class="dropdown-btn"> 
               <i class="bi-file-earmark-text"></i>
               <span class="nav-link-text">Rapports </span>
-            </a>
+            </button>
+            <div class="dropdown-container">
+              
+              <a href="/report/new"> <i class="bi-plus-circle"></i><span class="nav-link-text">Nouveau</span> </a>
+              <a href="/reports"> <i class="bi-clock-history"></i> <span class="nav-link-text">Liste rapports</span> </a>
+             
+            </div>
           </li>
+          {% endif%}
                     
         </ul>
       <!-- </div> -->
       <hr class="line"/>
       <ul class="navbar-nav">
+        {% if user.get_username == "admin" %}
         <li class="nav-item">
           <a href="/admin">
             <i class="bi-gear"></i>
             <span>Paramètres</span>
           </a>
         </li>
+        {% endif %}
         <li class="nav-item">
           {% if request.user.is_authenticated%}
           <a href="/logout">
